src/test/ui/feature-gate-used.stderr
error[E0658]: the `#[used]` attribute is an experimental feature (see issue #40289)
  --> $DIR/feature-gate-used.rs:11:1
   |
11 | #[used]
   | ^^^^^^^
   |
   = help: add #![feature(used)] to the crate attributes to enable

error: aborting due to previous error

